[package]
name = "accord"
version = "0.1.2"
authors = ["Christoffer Buchholz <chris@chrisbuchholz.me>"]
description = """
Library for validating data according to rules like "contains", "length", "either", "range".
"""
documentation = "https://docs.rs/accord"
repository = "https://github.com/ChrisBuchholz/accord"
readme = "README.md"
keywords = ["accord", "rules", "library", "data", "validation"]
license = "MIT"

[dependencies]
serde = "0.8.21"
serde_derive = "0.8.21"
serde_json = "0.8.4"
